--- a/.github/workflows/gen-pr-no-sec-options-github.yml
+++ b/.github/workflows/gen-pr-no-sec-options-github.yml
@@ -1,43 +1,43 @@
-# name: gen-pr-no-sec-options-github
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches: [ main ]
+name: gen-pr-no-sec-options-github
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: [ main ]
 
-# jobs:
-#   scan:
+jobs:
+  scan:
 #     permissions:
 #       issues: write
-#     name: Scan
-#     runs-on: ubuntu-20.04
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+    name: Scan
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
         
-#       - name: Run Trivy scanner
-#         uses: aquasecurity/trivy-action@master
-#         with:
-#           scan-type: 'fs'
-#           hide-progress: true
-#           output: trivy.txt
+      - name: Run Trivy scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          hide-progress: true
+          output: trivy.txt
       
-#       - name: Publish Trivy Output to Summary
-#         run: |
-#           if [[ -s trivy.txt ]]; then
-#             {
-#               echo "### Security Output"
-#               echo "<details><summary>Click to expand</summary>"
-#               echo ""
-#               echo '```Pisc NodeJS App'
-#               cat trivy.txt
-#               echo '```'
-#               echo "</details>"
-#             } >> $GITHUB_STEP_SUMMARY
-#           fi
+      - name: Publish Trivy Output to Summary
+        run: |
+          if [[ -s trivy.txt ]]; then
+            {
+              echo "### Security Output"
+              echo "<details><summary>Click to expand</summary>"
+              echo ""
+              echo '```Pisc NodeJS App'
+              cat trivy.txt
+              echo '```'
+              echo "</details>"
+            } >> $GITHUB_STEP_SUMMARY
+          fi
           
-#       - name: Trivy Scan and Report to PR
-#         uses: domstolene/trivy-pr-report@v1
-#         with:
-#           github_token: ${{secrets.GITHUB_TOKEN}}
+      - name: Trivy Scan and Report to PR
+        uses: domstolene/trivy-pr-report@v1
+        with:
+          github_token: ${{secrets.GITHUB_TOKEN}}
